tests/fixtures/invalid/bytes_bitxor_dict.py
# Cannot bitwise XOR Bytes and Dict[str, int]
x: bytes = b"hello" ^ {"a": 1}
